--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/react-dom": "^18.0.5",
     "eslint": "8.19.0",
     "eslint-config-next": "12.2.0",
+    "prettier": "^2.7.1",
     "typescript": "^4.7.4"
   }
 }
